# CargoNetSim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md
src/: CMakeLists.txt  main.cpp
src/Backend/: BackendInit.h  CMakeLists.txt
src/Backend/Application/: AvailabilityService.cpp  AvailabilityService.h  NetworkManagementService.cpp  NetworkManagementService.h  NetworkViewService.cpp  NetworkViewService.h  PathPresentationService.cpp  PathPresentationService.h  PreparedPathService.cpp  PreparedPathService.h  RouteAuthoringService.cpp  RouteAuthoringService.h  ScenarioEditService.cpp  ScenarioEditService.h  ScenarioLoadService.cpp  ScenarioLoadService.h  ScenarioPersistenceService.cpp  ScenarioPersistenceService.h  ScenarioPreviewService.cpp  ScenarioPreviewService.h  SimulationRunService.cpp  SimulationRunService.h
src/Backend/Bootstrap/: BackendBootstrapService.cpp  BackendBootstrapService.h
src/Backend/CliApi/: PathsApi.h  ProgressApi.h  ResultsApi.h  ScenarioDocumentApi.h  ValidationApi.h
src/Backend/Commons/: GeoDistance.cpp  GeoDistance.h  GeoProjection.cpp  GeoProjection.h  LogCategories.cpp  LogCategories.h  LogMessageHandler.cpp  LogMessageHandler.h  NetworkKind.cpp  NetworkKind.h  ShortestPathResult.h  ThreadSafetyUtils.h  TransportationMode.cpp  TransportationMode.h  Units.h
src/Backend/Controllers/: CargoNetSimController.cpp  CargoNetSimController.h  ConfigController.cpp  ConfigController.h  NetworkController.cpp  RegionDataController.cpp  RegionDataController.h  VehicleController.cpp
src/Backend/GuiApi/: ScenarioContractsApi.h  ScenarioDocumentApi.h
src/Backend/Models/: BaseObject.cpp  Path.cpp  Path.h  PathSegment.cpp  PathSegment.h  ShipSystem.cpp  ShipSystem.h  SimulationTime.cpp  SimulationTime.h  Terminal.cpp  TrainSystem.cpp  TrainSystem.h
src/Backend/Scenario/: AutoLinkRule.h  BufferedExecutionEventQueue.cpp  BufferedExecutionEventQueue.h  Connection.h  ContainerAllocator.cpp  ContainerAllocator.h  CostWeightUnits.h  DispatchableWaveBuilder.cpp  DispatchableWaveBuilder.h  EstimatedPathCostCalculator.cpp  EstimatedPathCostCalculator.h  EstimatedPhysicsPopulator.cpp  EstimatedPhysicsPopulator.h  ExecutionContainerIdentity.cpp  ExecutionContainerIdentity.h  ExecutionEventAdapter.cpp  ExecutionEventAdapter.h  ExecutionPlanBuilder.cpp  ExecutionPlanBuilder.h  ExecutionPlanTypes.h  ExecutionProgressCalculator.cpp  ExecutionProgressCalculator.h  FleetSpec.h  GlobalLink.h  InterfaceConversion.cpp  InterfaceConversion.h  LatLon.h  LinkageSource.h  LinkageStrategy.h  MetricDisplayUnits.h  ModeDelayParams.h  NetworkExecutionSessionManager.cpp  NetworkExecutionSessionManager.h  NetworkLookup.cpp  NetworkLookup.h  NetworkSpec.h  NodeLinkage.h  OutputSpec.h  PathAllocation.h  PathDemandResolver.cpp  (+80 more)
src/Backend/Utils/: Utils.h
src/CLI/: CMakeLists.txt  ExitCodes.h  Subcommand.h  SubcommandDispatcher.cpp  SubcommandDispatcher.h  main.cpp
src/CLI/Commands/: CommandOutput.h  ConnectionsCommand.cpp  ConnectionsCommand.h  DiscoverCommand.cpp  DiscoverCommand.h  HelpVersion.cpp  HelpVersion.h  IssueFormatter.h  PathsCommand.cpp  PathsCommand.h  PreviewCommand.cpp  PreviewCommand.h  RunCommand.cpp  RunCommand.h  StatusCommand.cpp  StatusCommand.h  StopCommand.cpp  StopCommand.h  ValidateCommand.cpp  ValidateCommand.h
src/CLI/Ipc/: ControlChannel.cpp  ControlChannel.h  RuntimeStateFile.cpp  RuntimeStateFile.h
src/CLI/Output/: CsvResultsWriter.cpp  CsvResultsWriter.h  JsonResultsWriter.cpp  JsonResultsWriter.h
src/CLI/Progress/: ProgressReporter.cpp  ProgressReporter.h
src/CLI/docs/: cli_resources.qrc  help.txt
src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/GUI/Commons/: TransportationModeConversion.cpp  TransportationModeConversion.h
src/GUI/Controllers/: BasicButtonController.cpp  BasicButtonController.h  ConnectionController.cpp  ConnectionController.h  FleetController.cpp  FleetController.h  HeartbeatController.cpp  HeartbeatController.h  NetworkController.cpp  NetworkController.h  NetworkDrawingController.cpp  NetworkDrawingController.h  RegionController.cpp  (+12 more)
src/installer/: BuildInstaller.sh  CMakeLists.txt
src/rabbitmq-config/: CMakeLists.txt  RabbitMQConfigDialog.cpp  main.cpp
tests/: ArrivalModeTest.cpp  CMakeLists.txt  ContainerAllocatorTest.cpp  ControllerLifetimeTest.cpp  EstimatedPhysicsPopulatorTest.cpp  GeoDistanceTest.cpp  MossouriScenarioRegressionTest.cpp  NetworkViewServiceTest.cpp  PathDiscoveryTest.cpp  PathDistancePopulatorTest.cpp  PathFoundRemediationPhase2Test.cpp  PathMetricsCalculatorTest.cpp  PathPreparationServiceTest.cpp  PathSegmentTest.cpp  PreparedPathApplicationServiceTest.cpp  PreparedPathEligibilityServiceTest.cpp  ResultsExtractorTest.cpp  ScenarioApplierTest.cpp  ScenarioExecutorTest.cpp  ScenarioLinkerTest.cpp  ScenarioRuntimeTest.cpp  ScenarioTest.cpp  SegmentPhysicsEstimatorTest.cpp  ServerStatusProbeTest.cpp  SimulationOrchestratorTest.cpp  SimulationRequestBuilderTest.cpp  TerminalClientTest.cpp  TerminalHandoffResolverTest.cpp  TrainNetworkUnitsTest.cpp  UnitsContractTest.cpp
tests/CLI/: CMakeLists.txt  CliBackendBoundaryTest.cpp  ConnectionsCommandTest.cpp  ControlChannelTest.cpp  CsvResultsWriterTest.cpp  EndToEndRunTest.cpp  ExitCodesTest.cpp  HelpTextSnapshotTest.cpp  HelpVersionTest.cpp  JsonResultsWriterTest.cpp  PathsCommandTest.cpp  PreviewCommandTest.cpp  ProgressReporterTest.cpp  RunCommandTest.cpp  RuntimeStateFileTest.cpp  StatusCommandTest.cpp  StopCommandTest.cpp  SubcommandDispatcherTest.cpp  ValidateCommandTest.cpp
tests/GUI/: ConnectionLineFactoryTest.cpp  ConnectionLineViewTest.cpp  DestinationListEditorTest.cpp  GlobalTerminalItemViewTest.cpp  GuiBackendBoundaryTest.cpp  ItemEventBinderTest.cpp  MapPointFactoryTest.cpp  MapPointViewTest.cpp  ProjectSerializerTest.cpp  RegionCenterPointFactoryTest.cpp  RegionCenterPointViewTest.cpp  ScenarioEditServiceTest.cpp  ScenarioMutatorTest.cpp  SceneRepopulatorTest.cpp  ShortestPathTableIdentityTest.cpp  TerminalItemFactoryTest.cpp  TerminalItemViewTest.cpp  TransportationModeConversionTest.cpp
(+218 files in other folders)
